# OpenCV3-Intro-Book-Src

OpenCV3-examples/src/: CMakeLists.txt
OpenCV3-examples/src/【1】第一章/【2】图像显示/2_图像显示/: 2_ShowImage.cpp
OpenCV3-examples/src/【1】第一章/【6】播放视频/6_播放视频/: 6_PlayVideo.cpp
OpenCV3-examples/src/【1】第一章/【7】调用摄像头/7_调用摄像头/: 7_UseCamera.cpp
OpenCV3-examples/src/【2】第二章/【10】点追踪/10_点追踪/: 10_lkdemo.cpp
OpenCV3-examples/src/【2】第二章/【13】支持向量机之处理线性不可分数据/13_支持向量机之处理线性不可分数据/: 13_SVMForNonLinearlySeparableData.cpp
OpenCV3-examples/src/【2】第二章/【14】printf函数用法示例/14_printf函数用法示例/: 14_Use_printf.cpp
OpenCV3-examples/src/【6】第六章/【55】基本阈值操作/55_基本阈值操作/: 55_threshold.cpp
